# nautilus

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Nautilus by D3PSI.desktop  README.md  RubiksCube.cpp  RubiksCube.hpp  appveyor.yml  get_build_artifacts_appveyor.ps1  get_linux_artifact_appveyor.ps1  nautilus-install.sh  test
.circleci/: config.yml
.github/workflows/: ccpp.yml  linux.yml  macos.yml  windows.yml
cmake/: FindASSIMP.cmake  FindOpenGL.cmake  FindSDL.cmake  FindSDL_image.cmake
docs/: index.md
examples/: CMakeLists.txt
examples/Dev/: Dev.cpp  DevShell.cpp  DevShell.hpp
examples/cross_api_multiple_windows/: Main.cpp
examples/dev/: Dev.cpp  DevShell.cpp  DevShell.hpp  Main.cpp  dev.cpp
examples/opengl_borderless_windowed/: Main.cpp
examples/opengl_camera_first_person/: Main.cpp
examples/opengl_fullscreen/: Main.cpp
examples/opengl_multiple_windows/: Main.cpp
examples/opengl_no_window_decoration/: Main.cpp
examples/opengl_rubiks_cube_3d/: Main.cpp  RubiksShell.cpp  RubiksShell.hpp
examples/opengl_rubiks_cube_4d/: Main.cpp
examples/opengl_standard/: Main.cpp
examples/opengl_standard_2d_pipeline/: ExampleShell.cpp  ExampleShell.hpp  Main.cpp
examples/opengl_windowed/: Main.cpp
examples/vulkan_borderless_windowed/: Main.cpp
examples/vulkan_fullscreen/: Main.cpp
examples/vulkan_multiple_windows/: Main.cpp
examples/vulkan_no_window_decoration/: Main.cpp
examples/vulkan_standard/: Main.cpp
examples/vulkan_windowed/: Main.cpp
ext/: CMakeLists.txt
ext/SDL/lib/: SDL2.lib  SDL2main.lib
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
include/: Nautilus.hpp  NautilusCore.hpp  NautilusOpenGLShell.hpp  NautilusShell.hpp  NautilusShellContext.hpp
include/nautilus/: Nautilus.hpp  NautilusAssert.hpp  NautilusBufferDepthVulkan.hpp  NautilusBufferVertexVulkan.hpp  NautilusCamera.hpp  NautilusCamera2D.hpp  NautilusCameraCoordinateSystemAxis.hpp  NautilusCameraFPS.hpp  NautilusCameraFocus.hpp  NautilusCameraMode.hpp  NautilusCameraMovementDirection.hpp  NautilusCore.hpp  NautilusCoreHandlesVulkan.hpp  NautilusDefaults.hpp  NautilusDescriptorVulkan.hpp  NautilusFPSCamera.hpp  NautilusFocusCamera.hpp  NautilusImageMSAAVulkan.hpp  NautilusImageVulkan.hpp  NautilusLogger.hpp  NautilusLoggerWorker.hpp  NautilusMesh.hpp  NautilusModel.hpp  NautilusNS.hpp  NautilusNS.tcc  NautilusOpenGLShell.hpp  NautilusPipeline.hpp  NautilusQueueTypeVulkan.hpp  NautilusShader.hpp  NautilusShaderComponentInOut.hpp  NautilusShaderComponentInputBuffer.hpp  NautilusShaderComponentType.hpp  NautilusShaderComponentUniform.hpp  NautilusShaderCompute.hpp  NautilusShaderFragment.hpp  NautilusShaderGeometry.hpp  NautilusShaderPipeline.hpp  NautilusShaderTesselation.hpp  NautilusShaderTesselationControl.hpp  NautilusShaderTesselationEvaluation.hpp  (+17 more)
nautilus/: CMakeLists.txt  Nautilus.hpp  NautilusAPI.hpp  NautilusAssert.hpp  NautilusBufferDepthVulkan.cpp  NautilusBufferDepthVulkan.hpp  NautilusBufferIndexVulkan.cpp  NautilusBufferIndexVulkan.hpp  NautilusBufferVertexVulkan.cpp  NautilusBufferVulkan.cpp  NautilusBufferVulkan.hpp  NautilusCamera.cpp  NautilusCamera.hpp  NautilusCamera2D.cpp  NautilusCamera2D.hpp  NautilusCameraCoordinateSystemAxis.hpp  NautilusCameraFPS.cpp  NautilusCameraFPS.hpp  NautilusCameraFocus.cpp  NautilusCameraFocus.hpp  NautilusCameraMode.hpp  NautilusCameraMovementDirection.hpp  NautilusCore.cpp  NautilusCore.hpp  NautilusDefaults.cpp  NautilusDefaults.hpp  NautilusDimension.hpp  NautilusFPSCamera.cpp  NautilusFPSCamera.hpp  NautilusFocusCamera.cpp  NautilusFocusCamera.hpp  NautilusImageMSAAVulkan.cpp  NautilusImageMSAAVulkan.hpp  NautilusImageTextureVulkan.cpp  NautilusImageTextureVulkan.hpp  NautilusImageVulkan.cpp  NautilusImageVulkan.hpp  NautilusInterface.hpp  NautilusLogger.cpp  NautilusLogger.hpp  (+85 more)
res/shaders/opengl/v330_core/standard_2d/: standard_2d.glsl.frag  standard_2d.glsl.vert
res/shaders/opengl/v330_core/standard_3d/: standard_3d.glsl.frag  standard_3d.glsl.vert
