file(GLOB BASE_SRC "*.c" "*.cpp" "../ext/imgui/*.cpp" "../ext/glad/src/glad.c")
file(GLOB BASE_HEADERS "*.hpp" ".h")

IF(MACOSX_COMPILATION)
    add_custom_command(TARGET nautilus PRE_BUILD COMMAND rm -rfv ${NAUTILUS_HEADER_MOVE_DIR}/* && cp -r ${BASE_HEADERS} ${NAUTILUS_HEADER_MOVE_DIR})
    add_library(nautilus STATIC ${BASE_SRC})
    target_link_libraries(nautilus ${Vulkan_LIBRARIES} ${GLFW3_LIBRARY} ${ASSIMP_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
ELSE()
    IF(WIN32)
        add_custom_command(TARGET nautilus PRE_BUILD COMMAND "del /s/f ${NAUTILUS_HEADER_MOVE_DIR}/* && move ${BASE_HEADERS} ${NAUTILUS_HEADER_MOVE_DIR}")
        add_library(nautilus STATIC ${BASE_SRC})
        target_link_libraries(nautilus ${Vulkan_LIBRARIES} ${GLFW3_LIBRARY} ${GLM_LIBRARIES} ${ASSIMP_LIBRARIES} ${WINLIBS})
    ELSE(WIN32)
        add_custom_command(TARGET nautilus PRE_BUILD COMMAND rm -rfv ${NAUTILUS_HEADER_MOVE_DIR}/* && cp -r ${BASE_HEADERS} ${NAUTILUS_HEADER_MOVE_DIR})
        add_library(nautilus STATIC ${BASE_SRC})
        target_link_libraries(nautilus stdc++fs dl ${Vulkan_LIBRARIES} ${GLFW3_LIBRARY} ${GLM_LIBRARIES} ${ASSIMP_LIBRARIES} ${XCB_LIBRARIES} ${WAYLAND_CLIENT_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
    ENDIF(WIN32)
ENDIF()