file(GLOB BASE_SRC "*.c" "*.cpp" "../ext/imgui/*.cpp" "../ext/glad/src/glad.c")
file(GLOB BASE_HEADERS "*.hpp" ".h")

IF(MACOSX_COMPILATION)
    add_library(nautilus STATIC ${BASE_SRC})
    target_link_libraries(nautilus curses ${Vulkan_LIBRARIES} ${GLFW3_LIBRARY} ${ASSIMP_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
    add_custom_command(TARGET nautilus PRE_BUILD COMMAND rm -rfv ${NAUTILUS_HEADER_MOVE_DIR}/* && cp -r ${BASE_HEADERS} ${NAUTILUS_HEADER_MOVE_DIR})
ELSE()
    IF(WIN32)
        add_library(nautilus STATIC ${BASE_SRC})
        target_link_libraries(nautilus curses ${Vulkan_LIBRARIES} ${GLFW3_LIBRARY} ${GLM_LIBRARIES} ${ASSIMP_LIBRARIES} ${WINLIBS})
        file(COPY ${BASE_HEADERS} DESTINATION ${NAUTILUS_HEADER_MOVE_DIR}\\)
    ELSE(WIN32)
        add_library(nautilus STATIC ${BASE_SRC})
        target_link_libraries(nautilus curses stdc++fs dl ${Vulkan_LIBRARIES} ${GLFW3_LIBRARY} ${GLM_LIBRARIES} ${ASSIMP_LIBRARIES} ${XCB_LIBRARIES} ${WAYLAND_CLIENT_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
        add_custom_command(TARGET nautilus PRE_BUILD COMMAND rm -rfv ${NAUTILUS_HEADER_MOVE_DIR}/* && cp -r ${BASE_HEADERS} ${NAUTILUS_HEADER_MOVE_DIR})
    ENDIF(WIN32)
ENDIF()